# product_live

./: .env.example  README.md  RUN_DEBIAN.md  RUN_UBUNTU_YANDEX_CLOUD.md  docker-compose.yml  main.md
.cursor/rules/: git-auto-push.mdc
backend/: Dockerfile  pyproject.toml
backend/app/: cli_init_db.py  config.py  main.py
backend/app/core/: db.py  security.py
backend/app/models/: __all_models__.py  character.py  city.py  place.py  user.py  visit_scenario.py
backend/app/routers/: auth.py  map.py  places.py  visit_scenarios.py
backend/app/schemas/: auth.py  character.py  place.py  user.py  visit_scenario.py
deploy/: README.md  deploy.sh  webhook_server.py
frontend/: next.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/city/: page.tsx
frontend/app/components/: LiveGlobe.module.css  LiveGlobe.tsx
frontend/app/profile/: page.tsx
frontend/lib/: api.ts
