[tool.poetry]
name = "live-city-backend"
version = "0.1.0"
description = "Backend for live city map project (FastAPI + Postgres)"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
SQLAlchemy = "^2.0.36"
alembic = "^1.14.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = ">=4.0.1,<4.1"  # passlib несовместим с bcrypt 4.1+
python-jose = "^3.3.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
email-validator = "^2.2.0"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

